[package]
name = "h1emu-ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
bevy_ecs = "0.14.0"
binrw = "0.14.0"
js-sys = "0.3.69"
lz4_flex = "0.11.3"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
lto = true
# strip = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
