[package]
name = "h1emu-ai"
version = "0.0.12"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
bevy_ecs = "0.15.3"
chrono = "0.4.40"
js-sys = "0.3.77"
once_cell = "1.21.3"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen = "0.2.100"
criterion = { version = "0.5.1" }

[features]
default = ["traps"]
full = ["traps", "zombies"]
zombies = []
traps = []

[[bench]]
name = "lib-bench"
harness = false

[profile.dev]
lto = true
# strip = true
opt-level = 3
[profile.release]
lto = true
# strip = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
